--- a/app/views/docs/index/_sidebar.html.erb
+++ b/app/views/docs/index/_sidebar.html.erb
@@ -6,7 +6,7 @@
 		<%= active_link_to "The Grid", docs_grid_path, wrap_tag: :dd, class: "js-pjax" %>
 		<%= active_link_to "Typography", docs_typography_path, wrap_tag: :dd, class: "js-pjax" %>
 		<%= active_link_to "Buttons", docs_buttons_path, wrap_tag: :dd, class: "js-pjax" %>
-		<%= active_link_to "Forms", docs_forms_path, wrap_tag: :dd, class: "js-pjax" %>
+		<%= active_link_to "Forms", docs_forms_path, wrap_tag: :dd, class: "" %>
 		<%= active_link_to "Navigation", docs_navigation_path, wrap_tag: :dd, class: "js-pjax" %>
 		<%= active_link_to "Tabs", docs_tabs_path, wrap_tag: :dd, class: "js-pjax" %>
 		<%= active_link_to "Elements", docs_elements_path, wrap_tag: :dd, class: "js-pjax" %>
