--- a/app/views/layouts/docs/application.html.erb
+++ b/app/views/layouts/docs/application.html.erb
@@ -29,10 +29,9 @@
     $.pjax.defaults.timeout = false;
     <% end %>
     // Only some pages should use PJAX
-    // $('.js-pjax a').pjax('[data-pjax-container]');
-    Rainbow.onHighlight(function(block, language){
-      $(block).parent('pre').show();
-    });
+    //$('.js-pjax a').pjax('[data-pjax-container]');
+    hljs.tabReplace = '  ';
+    hljs.initHighlightingOnLoad();
 	</script>
   
   <%= csrf_meta_tags %>
@@ -94,6 +93,11 @@
 	</header>
   <div data-pjax-container>
     <%= yield %>
+  </div>
+  <div class="row">
+    <div class="twelve columns">
+      <hr>
+    </div>
   </div>
   <%= render "footer" %>
   <% if false %>
