--- a/app/views/docs/index/buttons.html.erb
+++ b/app/views/docs/index/buttons.html.erb
@@ -7,9 +7,9 @@
 
 				<p>Foundation buttons have a number of parameters and styles &mdash; you can see a few examples below. The out of the box classes include size, type (color) and style (square, slightly rounded, and completely rounded).</p>
 
-				<pre><code data-language="html"><a href="#" class="[tiny, small, medium, large] button">Button Text</a>
+				<%= code_block do %><a href="#" class="[tiny, small, medium, large] button">Button Text</a>
 <a href="#" class="[radius, round] button">Button Text</a>
-<a href="#" class="[success, alert, secondary] button">Button Text</a></code></pre>
+<a href="#" class="[success, alert, secondary] button">Button Text</a><% end %>
 
 				<div class="row">
 					<div class="six columns">
@@ -57,11 +57,11 @@
           <li><a href="#" class="button radius">Button 3</a></li>
         </ul>
 
-        <pre><code data-language="html"><ul class="button-group [radius, rounded]">
+        <%= code_block do %><ul class="button-group [radius, rounded]">
   <li><a href="#" class="button radius">Button 1</a></li>
   <li><a href="#" class="button radius">Button 2</a></li>
   <li><a href="#" class="button radius">Button 3</a></li>
-</ul></code></pre>
+</ul><% end %>
 
         <h5>Even Button Groups</h5>
         <p>If you want a button group to fill a grid column with evenly sized actions, you can simply add two classes to the group: <code>.even</code> and either <code>.two-up</code>, <code>.three-up</code>, <code>.four-up</code>, or <code>.five-up</code>.
@@ -72,11 +72,11 @@
           <li><a href="#" class="button">Button 3</a></li>
         </ul>
 
-        <pre><code data-language="html"><ul class="button-group even three-up">
+        <%= code_block do %><ul class="button-group even three-up">
   <li><a href="#" class="button">Button 1</a></li>
   <li><a href="#" class="button">Button 2</a></li>
   <li><a href="#" class="button">Button 3</a></li>
-</ul></code></pre>
+</ul><% end %>
 
         <h5>Button Bars</h5>
         <p>A button bar is a group of button groups (I N C E P T I O N), perfect for situations where you want groups of actions that are all related to a similar element or page. Simply wrap two or more button groups in a <code>div.button-bar</code> and Foundation takes care of the rest.</p>
@@ -95,7 +95,7 @@
           </ul>
         </div>
 
-        <pre><code data-language="html"><div class="button-bar">
+        <%= code_block do %><div class="button-bar">
   <ul class="button-group">
     <li><a href="#" class="button">Button 1</a></li>
     <li><a href="#" class="button">Button 2</a></li>
@@ -107,7 +107,7 @@
     <li><a href="#" class="button">Button 2</a></li>
     <li><a href="#" class="button">Button 3</a></li>
   </ul>
-</div></code></pre>
+</div><% end %>
 
         <p>Buttons within groups or bars can also be individually set to a particular type (color) or size. Obviously if you create a button bar with different sized buttons the visual presentation may suffer a bit, but we wanted these to be very flexible.</p>
 
@@ -143,7 +143,7 @@
         
         <p>If you need your dropdown to go up, simple add a class of <code>.up</code> to <code>.button.dropdown</code>.</p>
 
-        <pre><code data-language="html"><div href="#" class="large button dropdown">
+        <%= code_block do %><div href="#" class="large button dropdown">
   Dropdown Button
   <ul>
     <li><a href="#">Dropdown Item</a></li>
@@ -151,7 +151,7 @@
     <li class="divider"></li>
     <li><a href="#">Last Item</a></li>
   </ul>
-</div></code></pre>
+</div><% end %>
 
         <h5>Split Button</h5>
         <p>Split buttons in turn use similar classes, and a different structure than regular or dropdown buttons.</p>
@@ -169,7 +169,7 @@
           </div>
         </p>
 
-        <pre><code data-language="html"><div href="#" class="large alert button split dropdown">
+        <%= code_block do %><div href="#" class="large alert button split dropdown">
   <a href="#">Split Button</a>
   <span></span>
   <ul>
@@ -178,7 +178,7 @@
     <li class="divider"></li>
     <li><a href="#">Last Item</a></li>
   </ul>
-</div></code></pre>
+</div><% end %>
 
         <p>Notice that in a split button, the <code>span</code> is the dropdown affordance and the main anchor is the primary button action.</p>
 
