--- a/app/views/docs/index/typography.html.erb
+++ b/app/views/docs/index/typography.html.erb
@@ -9,8 +9,9 @@
 				<p>Based on some stellar work by <a href="http://www.alistapart.com/articles/more-meaningful-typography/">Tim Brown</a>, the idea of a <a href="http://www.zurb.com/article/1000/foundation-30-typography-and-modular-scal">modular scale</a> is that the size and spacing of all of the typography in the framework is derived from an initial value, another arbitrary "important" value, and a particular ratio. We chose to use the golden ratio, but there are others available.</p>
 				<p>We then use Sass to generate sizes based on those values, in an ascending scale of size and spacing. If you use the SCSS version of Foundation you can easily change these values, otherwise we default to a 14px base with a 44px important value (based on common UI element size).</p>
 
-				<script src="https://gist.github.com/3318494.js?file=modscale.scss"></script>
-				<pre><code data-language="css">// Variables
+
+				<%= code_block do %>
+// Variables
 $ratio: $golden;
 $baseSize: 14px;
 $importantModNum: 44px;
@@ -18,7 +19,8 @@ $importantModNum: 44px;
 // Modular Scale SCSS Function Syntax
 h6 { font-size: ms(0); } // First Number in Scale
 h5 { font-size: ms(1); } // Second Number in Scale
-h4 { font-size: ms(2); } // Third Number in Scale</code></pre>
+h4 { font-size: ms(2); } // Third Number in Scale
+        <% end %>
 
 				<hr />
 
@@ -48,12 +50,12 @@ h4 { font-size: ms(2); } // Third Number in Scale</code></pre>
           <h2>This is a very large main header.</h2>
           <h4 class="subheader">This is a smaller subheader.</h4>
 
-          <pre><code data-language="html"><h2>This is a large main header.</h2>
+          <%= code_block do %><h2>This is a large main header.</h2>
 <h4 class="subheader">This is a smaller subheader.</h4>
-</code></pre>
+<% end %>
 
           <h3>This is a large header. <small>This is a small segment of that header.</small></h3>
-          <pre><code data-language="html"><h3>This is a large header. <small>This is a small segment of that header.</small></h3></code></pre>
+          <%= code_block do %><h3>This is a large header. <small>This is a small segment of that header.</small></h3><% end %>
 				</div>
 
 				<hr />
@@ -136,10 +138,10 @@ h4 { font-size: ms(2); } // Third Number in Scale</code></pre>
 
 				<blockquote>I do not fear computers. I fear the lack of them. <cite>Isaac Asimov</cite></blockquote>
 
-				<pre><code data-language="html"><blockquote>
+				<%= code_block do %><blockquote>
   I do not fear computers. I fear the lack of them. 
   <cite>Isaac Asimov</cite>
-</blockquote></code></pre>
+</blockquote><% end %>
 
 				<hr />
 
