--- a/app/views/features/index/grid.html.erb
+++ b/app/views/features/index/grid.html.erb
@@ -20,22 +20,22 @@
       <h4>Examples</h4>
       <div class="row">
       	<div class="four columns">
-      	  <a href="grid-example1.php" target="_blank">
+      	  <%= link_to examples_grid_path(id:1), target: "_blank" do %>
       	    <%= image_tag "feature-grid-2.png" %>
       	    <p>All Grid Sizes</p>
-      	  </a>
+      	  <% end %>
       	</div>
       	<div class="four columns">
-      	  <a href="grid-example2.php" target="_blank">
+      	  <%= link_to examples_grid_path(id:2), target: "_blank" do %>
       	    <%= image_tag "feature-grid-3.png" %>
       	    <p>Nesting the Grid</p>
-      	  </a>
+      	  <% end %>
       	</div>
       	<div class="four columns">
-      	  <a href="grid-example3.php" target="_blank">
+      	  <%= link_to examples_grid_path(id:3), target: "_blank" do %>
       	    <%= image_tag "feature-grid-4.png" %>
       	    <p>Mobile Grids</p>
-      	  </a>
+      	  <% end %>
       	</div>
       </div>
 
