--- a/app/views/features/index/mobile.html.erb
+++ b/app/views/features/index/mobile.html.erb
@@ -20,22 +20,22 @@
       <h4>Examples</h4>
       <div class="row">
       	<div class="four columns">
-      	  <a href="mobile-example1.php" target="_blank">
+      	  <%= link_to examples_mobile_path(id:1), target: "_blank" do %>
       	    <%= image_tag "feature-mobile-2.png" %>
       	    <p>Mobile Grid</p>
-      	  </a>
+      	  <% end %>
       	</div>
       	<div class="four columns">
-      	  <a href="mobile-example2.php" target="_blank">
+      	  <%= link_to examples_mobile_path(id:2), target: "_blank" do %>
       	    <%= image_tag "feature-mobile-3.png" %>
       	    <p>Mobile Navigation</p>
-      	  </a>
+      	  <% end %>
       	</div>
       	<div class="four columns">
-      	  <a href="mobile-example3.php" target="_blank">
+      	  <%= link_to examples_mobile_path(id:3), target: "_blank" do %>
       	    <%= image_tag "feature-mobile-4.png" %>
       	    <p>Mobile Visibility</p>
-      	  </a>
+      	  <% end %>
       	</div>
       </div>
 
